Fix double scrollbar in group info modal

--- a/css/style.css
+++ b/css/style.css
@@ -4767,8 +4767,6 @@ body {
 }
 
 .group-members-list {
-    max-height: 300px;
-    overflow-y: auto;
     margin: 15px 0;
 }
 
