--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5329,8 +5329,6 @@ body {
 }
 
 .group-members-list {
-    max-height: 300px;
-    overflow-y: auto;
     margin: 15px 0;
 }
 
